--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>99DriverRecife - Lives</title>
 <style>
-body {
+html, body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background: transparent;
+    padding: 0;
+    background: transparent !important;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container {
-    width: 100%;
-    max-width: 600px;
-    height: 380px;
+    width: 360px;
+    height: 200px;
     position: relative;
     overflow: hidden;
 }
@@ -26,56 +26,58 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(255, 212, 0, 0.33); /* 33% opacity */
-    backdrop-filter: blur(6px);
+    background: rgba(255, 212, 0, 0.33);
+    backdrop-filter: blur(8px);
     color: #FFFFFF;
-    border-radius: 25px;
-    padding: 30px;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+    border-radius: 18px;
+    padding: 18px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.35);
     box-sizing: border-box;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     transform: translateX(100%);
-    transition: transform 0.8s cubic-bezier(.4,0,.2,1);
+    opacity: 0;
+    transition: 
+        transform 0.9s cubic-bezier(.65,.05,.36,1),
+        opacity 0.6s ease;
 }
 .card.active {
     transform: translateX(0);
+    opacity: 1;
+    z-index: 2;
 }
 .card.exit-left {
     transform: translateX(-100%);
+    opacity: 0;
+    z-index: 1;
 }
 .city {
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
-    letter-spacing: 3px;
-    margin-bottom: 10px;
+    letter-spacing: 2px;
+    margin-bottom: 6px;
 }
 .weather-icon {
-    width: 110px;
-    height: 110px;
+    width: 65px;
+    height: 65px;
 }
 .main-info {
-    font-size: 64px;
+    font-size: 32px;
     font-weight: bold;
-    margin: 10px 0;
+    margin: 4px 0;
+    text-shadow: 0 0 8px rgba(0,0,0,0.6);
 }
 .logo {
-    max-width: 220px;
-    margin-bottom: 20px;
+    max-width: 140px;
+    margin-bottom: 10px;
 }
 .gif-ad {
     max-width: 100%;
-    max-height: 260px;
-}
-@media (max-width: 480px) {
-    .container {
-        height: 300px;
-    }
-    .main-info {
-        font-size: 48px;
-    }
+    max-height: 120px;
 }
 </style>
 </head>
@@ -131,18 +133,23 @@ const cards = [
     {el: document.getElementById("card3"), duration: 10000}
 ];
 let current = 0;
-function showNextCard() {
+function transitionToNextCard() {
     const currentCard = cards[current].el;
+    const nextIndex = (current + 1) % cards.length;
+    const nextCard = cards[nextIndex].el;
+
     currentCard.classList.remove("active");
     currentCard.classList.add("exit-left");
+
+    nextCard.classList.add("active");
+
     setTimeout(() => {
         currentCard.classList.remove("exit-left");
-        current = (current + 1) % cards.length;
-        cards[current].el.classList.add("active");
-    }, 800);
-    setTimeout(showNextCard, cards[current].duration + 800);
+        current = nextIndex;
+        setTimeout(transitionToNextCard, cards[current].duration);
+    }, 900);
 }
-setTimeout(showNextCard, cards[0].duration);
+setTimeout(transitionToNextCard, cards[0].duration);
 if (gifPath) {
     document.getElementById("adGif").src = gifPath;
     document.getElementById("adGif").style.display = "block";
