--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>99DriverRecife - Lives</title>
+
 <style>
 html, body {
     margin: 0;
@@ -16,17 +17,19 @@ html, body {
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .container {
     width: 360px;
     height: 200px;
     position: relative;
     overflow: hidden;
 }
+
 .card {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(255, 212, 0, 0.33);
+    background: rgba(255, 212, 0, 0.5); /* 50% opacidade */
     backdrop-filter: blur(8px);
     color: #FFFFFF;
     border-radius: 18px;
@@ -45,94 +48,145 @@ html, body {
         transform 0.9s cubic-bezier(.65,.05,.36,1),
         opacity 0.6s ease;
 }
+
 .card.active {
     transform: translateX(0);
     opacity: 1;
     z-index: 2;
 }
+
 .card.exit-left {
     transform: translateX(-100%);
     opacity: 0;
     z-index: 1;
 }
+
 .city {
     font-size: 14px;
     font-weight: bold;
     letter-spacing: 2px;
     margin-bottom: 6px;
 }
+
 .weather-icon {
     width: 65px;
     height: 65px;
 }
-.main-info {
-    font-size: 32px;
+
+.info-row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 6px;
+    font-size: 30px;
     font-weight: bold;
-    margin: 4px 0;
-    text-shadow: 0 0 8px rgba(0,0,0,0.6);
+    text-shadow: 0 0 10px rgba(0,0,0,0.6);
 }
+
+.separator {
+    opacity: 0.6;
+}
+
+#clock {
+    font-size: 26px;
+    opacity: 0.95;
+}
+
 .logo {
     max-width: 140px;
     margin-bottom: 10px;
 }
+
 .gif-ad {
     max-width: 100%;
     max-height: 120px;
 }
 </style>
 </head>
+
 <body>
+
 <div class="container">
+
+    <!-- CARD 1 - CLIMA -->
     <div class="card active" id="card1">
         <div class="city">RECIFE</div>
         <img id="weatherIcon" class="weather-icon" src="" alt="Clima">
-        <div class="main-info" id="temperature">--º</div>
-        <div class="main-info" id="clock">00:00</div>
+
+        <div class="info-row">
+            <span id="temperature">--º</span>
+            <span class="separator">|</span>
+            <span id="clock">00:00</span>
+        </div>
     </div>
+
+    <!-- CARD 2 - LOGO -->
     <div class="card" id="card2">
         <img src="https://via.placeholder.com/220x120.png?text=LOGO" class="logo">
-        <div class="main-info" style="font-size:32px;">CONTEÚDO ORIGINAL</div>
+        <div style="font-size:22px; font-weight:bold; text-shadow: 0 0 8px rgba(0,0,0,0.6);">
+            CONTEÚDO ORIGINAL
+        </div>
     </div>
+
+    <!-- CARD 3 - ANÚNCIO -->
     <div class="card" id="card3">
         <img id="adGif" class="gif-ad" src="" style="display:none;">
-        <div id="adText" class="main-info" style="font-size:32px;">Anuncie Aqui</div>
+        <div id="adText" style="font-size:22px; font-weight:bold; text-shadow: 0 0 8px rgba(0,0,0,0.6);">
+            Anuncie Aqui
+        </div>
     </div>
+
 </div>
+
 <script>
 const latitude = -8.05;
 const longitude = -34.9;
-const gifPath = ""; // coloque seu gif aqui
+const gifPath = ""; // coloque seu GIF aqui se quiser
+
 async function getWeather() {
-    const response = await fetch(
-        `https://api.open-meteo.com/v1/forecast?latitude=${latitude}&longitude=${longitude}&current_weather=true`
-    );
-    const data = await response.json();
-    const temp = Math.round(data.current_weather.temperature);
-    const weatherCode = data.current_weather.weathercode;
-    document.getElementById("temperature").innerText = temp + "º";
-    document.getElementById("weatherIcon").src = getAnimatedIcon(weatherCode);
+    try {
+        const response = await fetch(
+            `https://api.open-meteo.com/v1/forecast?latitude=${latitude}&longitude=${longitude}&current_weather=true`
+        );
+        const data = await response.json();
+        const temp = Math.round(data.current_weather.temperature);
+        const weatherCode = data.current_weather.weathercode;
+
+        document.getElementById("temperature").innerText = temp + "º";
+        document.getElementById("weatherIcon").src = getAnimatedIcon(weatherCode);
+    } catch (error) {
+        console.log("Erro ao buscar clima:", error);
+    }
 }
+
 function getAnimatedIcon(code) {
     if (code === 0) return "https://basmilius.github.io/weather-icons/production/fill/all/clear-day.svg";
     if (code <= 3) return "https://basmilius.github.io/weather-icons/production/fill/all/partly-cloudy-day.svg";
     if (code <= 67) return "https://basmilius.github.io/weather-icons/production/fill/all/rain.svg";
     return "https://basmilius.github.io/weather-icons/production/fill/all/cloudy.svg";
 }
+
 function updateClock() {
     const now = new Date();
     const hours = String(now.getHours()).padStart(2, '0');
     const minutes = String(now.getMinutes()).padStart(2, '0');
     document.getElementById("clock").innerText = `${hours}:${minutes}`;
 }
+
 setInterval(updateClock, 1000);
 updateClock();
 getWeather();
+setInterval(getWeather, 600000); // atualiza clima a cada 10 min
+
 const cards = [
     {el: document.getElementById("card1"), duration: 15000},
     {el: document.getElementById("card2"), duration: 10000},
     {el: document.getElementById("card3"), duration: 10000}
 ];
+
 let current = 0;
+
 function transitionToNextCard() {
     const currentCard = cards[current].el;
     const nextIndex = (current + 1) % cards.length;
@@ -149,12 +203,15 @@ function transitionToNextCard() {
         setTimeout(transitionToNextCard, cards[current].duration);
     }, 900);
 }
+
 setTimeout(transitionToNextCard, cards[0].duration);
+
 if (gifPath) {
     document.getElementById("adGif").src = gifPath;
     document.getElementById("adGif").style.display = "block";
     document.getElementById("adText").style.display = "none";
 }
 </script>
+
 </body>
 </html>
