--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ html, body {
     backdrop-filter: blur(8px);
     color: #FFFFFF;
     border-radius: 18px;
-    padding: 18px;
+    padding: 16px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.35);
     box-sizing: border-box;
 
@@ -46,7 +46,8 @@ html, body {
     opacity: 0;
     transition: 
         transform 0.9s cubic-bezier(.65,.05,.36,1),
-        opacity 0.6s ease;
+        opacity 0.6s ease,
+        background 0.6s ease;
 }
 
 .card.active {
@@ -61,31 +62,27 @@ html, body {
     z-index: 1;
 }
 
-/* ============================= */
-/* HIERARQUIA DE FONTES */
-/* ============================= */
+/* ===== TIPOGRAFIA ===== */
 
-/* CIDADE */
 .city {
     font-size: 18px;
     font-weight: bold;
     letter-spacing: 2px;
-    margin-bottom: 6px;
+    margin-bottom: 2px; /* ↓ espaço reduzido */
 }
 
-/* ÍCONE */
 .weather-icon {
-    width: 95px;
-    height: 95px;
+    width: 90px;
+    height: 90px;
+    margin: 2px 0; /* ↓ espaço reduzido */
 }
 
-/* CLIMA + HORA */
 .info-row {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 12px;
-    margin-top: 6px;
+    gap: 10px;
+    margin-top: 2px; /* ↓ espaço reduzido */
     font-size: 42px;
     font-weight: bold;
     text-shadow: 0 0 12px rgba(0,0,0,0.7);
@@ -95,14 +92,12 @@ html, body {
     opacity: 0.6;
 }
 
-/* CONTEÚDO ORIGINAL */
 .card-title {
     font-size: 24px;
     font-weight: bold;
     text-shadow: 0 0 8px rgba(0,0,0,0.6);
 }
 
-/* ANUNCIE AQUI */
 .card-title-ad {
     font-size: 22px;
     font-weight: bold;
@@ -112,7 +107,7 @@ html, body {
 
 .logo {
     max-width: 140px;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 .gif-ad {
@@ -126,7 +121,7 @@ html, body {
 
 <div class="container">
 
-    <!-- CARD 1 - CLIMA -->
+    <!-- CARD 1 -->
     <div class="card active" id="card1">
         <div class="city">RECIFE</div>
         <img id="weatherIcon" class="weather-icon" src="" alt="Clima">
@@ -138,7 +133,7 @@ html, body {
         </div>
     </div>
 
-    <!-- CARD 2 - CONTEÚDO ORIGINAL -->
+    <!-- CARD 2 -->
     <div class="card" id="card2">
         <img src="https://via.placeholder.com/220x120.png?text=LOGO" class="logo">
         <div class="card-title">
@@ -146,7 +141,7 @@ html, body {
         </div>
     </div>
 
-    <!-- CARD 3 - ANÚNCIO -->
+    <!-- CARD 3 -->
     <div class="card" id="card3">
         <img id="adGif" class="gif-ad" src="" style="display:none;">
         <div id="adText" class="card-title-ad">
@@ -159,29 +154,59 @@ html, body {
 <script>
 const latitude = -8.05;
 const longitude = -34.9;
-const gifPath = ""; // coloque seu GIF aqui
+const gifPath = "";
 
 async function getWeather() {
     try {
         const response = await fetch(
             `https://api.open-meteo.com/v1/forecast?latitude=${latitude}&longitude=${longitude}&current_weather=true`
         );
+
         const data = await response.json();
+
         const temp = Math.round(data.current_weather.temperature);
         const weatherCode = data.current_weather.weathercode;
+        const isDay = data.current_weather.is_day;
 
         document.getElementById("temperature").innerText = temp + "º";
-        document.getElementById("weatherIcon").src = getAnimatedIcon(weatherCode);
+        document.getElementById("weatherIcon").src = getAnimatedIcon(weatherCode, isDay);
+
+        // 🌙 Ajuste automático do fundo
+        if (isDay === 0) {
+            document.querySelectorAll(".card").forEach(card => {
+                card.style.background = "rgba(20, 30, 60, 0.65)";
+            });
+        } else {
+            document.querySelectorAll(".card").forEach(card => {
+                card.style.background = "rgba(255, 212, 0, 0.5)";
+            });
+        }
+
     } catch (error) {
         console.log("Erro ao buscar clima:", error);
     }
 }
 
-function getAnimatedIcon(code) {
-    if (code === 0) return "https://basmilius.github.io/weather-icons/production/fill/all/clear-day.svg";
-    if (code <= 3) return "https://basmilius.github.io/weather-icons/production/fill/all/partly-cloudy-day.svg";
-    if (code <= 67) return "https://basmilius.github.io/weather-icons/production/fill/all/rain.svg";
-    return "https://basmilius.github.io/weather-icons/production/fill/all/cloudy.svg";
+function getAnimatedIcon(code, isDay) {
+
+    const base = "https://basmilius.github.io/weather-icons/production/fill/all/";
+
+    if (code === 0) {
+        return isDay
+            ? base + "clear-day.svg"
+            : base + "clear-night.svg";
+    }
+
+    if (code <= 3) {
+        return isDay
+            ? base + "partly-cloudy-day.svg"
+            : base + "partly-cloudy-night.svg";
+    }
+
+    if (code <= 67) return base + "rain.svg";
+    if (code <= 77) return base + "snow.svg";
+
+    return base + "cloudy.svg";
 }
 
 function updateClock() {
