--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@ html, body {
     font-size: 25px;
     font-weight: bold;
     letter-spacing: 2px;
-    margin-bottom: 1px; /* ↓ espaço reduzido */
+    margin-bottom: 1px;
 }
 
 .weather-icon {
     width: 90px;
     height: 90px;
-    margin: 1px 0; /* ↓ espaço reduzido */
+    margin: 1px 0;
 }
 
 .info-row {
@@ -82,7 +82,7 @@ html, body {
     align-items: center;
     justify-content: center;
     gap: 10px;
-    margin-top: 1px; /* ↓ espaço reduzido */
+    margin-top: 1px;
     font-size: 42px;
     font-weight: bold;
     text-shadow: 0 0 12px rgba(0,0,0,0.7);
@@ -92,22 +92,11 @@ html, body {
     opacity: 0.6;
 }
 
-.card-title {
-    font-size: 30px;
-    font-weight: bold;
-    text-shadow: 0 0 8px rgba(0,0,0,0.6);
-}
-
 .card-title-ad {
     font-size: 50px;
     font-weight: bold;
     opacity: 0.95;
     text-shadow: 0 0 8px rgba(0,0,0,0.6);
-}
-
-.logo {
-    max-width: 140px;
-    margin-bottom: 6px;
 }
 
 .gif-ad {
@@ -121,7 +110,7 @@ html, body {
 
 <div class="container">
 
-    <!-- CARD 1 -->
+    <!-- CARD 1 - CLIMA -->
     <div class="card active" id="card1">
         <div class="city">RECIFE</div>
         <img id="weatherIcon" class="weather-icon" src="" alt="Clima">
@@ -133,17 +122,7 @@ html, body {
         </div>
     </div>
 
-    <!-- CARD 2 -->
-<!---
-    <div class="card" id="card2">
-        <img src="https://via.placeholder.com/220x120.png?text=LOGO" class="logo">
-        <div class="card-title">
-            CONTEÚDO ORIGINAL
-        </div>
-    </div>
---->
-    
-    <!-- CARD 3 -->
+    <!-- CARD 2 - ANÚNCIO -->
     <div class="card" id="card3">
         <img id="adGif" class="gif-ad" src="" style="display:none;">
         <div id="adText" class="card-title-ad">
@@ -173,7 +152,7 @@ async function getWeather() {
         document.getElementById("temperature").innerText = temp + "º";
         document.getElementById("weatherIcon").src = getAnimatedIcon(weatherCode, isDay);
 
-        // 🌙 Ajuste automático do fundo
+        // Fundo dinâmico dia/noite
         if (isDay === 0) {
             document.querySelectorAll(".card").forEach(card => {
                 card.style.background = "rgba(20, 30, 60, 0.65)";
@@ -223,10 +202,11 @@ updateClock();
 getWeather();
 setInterval(getWeather, 600000);
 
+/* ===== CONTROLE DE TEMPO DOS CARDS ===== */
+
 const cards = [
-    {el: document.getElementById("card1"), duration: 25000},
-    {el: document.getElementById("card2"), duration: 15000},
-    {el: document.getElementById("card3"), duration: 10000}
+    {el: document.getElementById("card1"), duration: 20000}, // 20 segundos
+    {el: document.getElementById("card3"), duration: 10000}  // 10 segundos
 ];
 
 let current = 0;
